<resources>
    <string name="app_name">¿Quien quiere ser millonario?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="autor">Pablo Martín Moreno</string>
    <string name="email">pablomartinjunior@hotmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="jugar">Play</string>
    <string name="config">Settings</string>
    <string name="cred">Creditos</string>
    <string name="punt">Scores</string>
    <string name="nameInput">Enter your name</string>
    <string name="jokers">Jokers</string>
    <string name="addFriend">Add Friend</string>
    <string name="friendInput">Enter your friend`s name</string>
    <string name="LatitudActual">Current latitude</string>
    <string name="LongitudActual">Current longitude</string>
    <string name="getLct">Get location</string>
    <string name="JP">Playing for:</string>
    <string name="gameOver">Game over, your final score is: </string>
    <string name="rendir">Surrender</string>
    <string name="title_activity_maps">Map</string>


</resources>
