<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jugar"
            android:icon="@drawable/ic_euro_symbol"
            android:title="@string/jugar" />
        <item
            android:id="@+id/nav_puntuaciones"
            android:icon="@drawable/ic_timeline"
            android:title="@string/punt" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_settings"
            android:title="@string/config" />
        <item
            android:id="@+id/nav_creditos"
            android:icon="@drawable/ic_assignment_ind"
            android:title="@string/cred" />
    </group>



</menu>
